--- a/.gitignore
+++ b/.gitignore
@@ -221,4 +221,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# README
+*.READMME.md
 # End of https://www.gitignore.io/api/python,pycharm,windows
