--- a/.gitignore
+++ b/.gitignore
@@ -231,5 +231,7 @@ Daum_Regular.ttf
 earth.png
 JPype1-0.7.1-cp36-cp36m-win_amd64.whl
 네이버쇼핑.py
+*.xlsx
+
 #*.Lotto.txt
 # End of https://www.gitignore.io/api/python,pycharm,windows
